changed controlCode and controlCommand to code and command respectively
